# SimpleRaytracing

./: .gitignore  AABB.h  BSDF.h  BVHNode.h  CMakeLists.txt  Constants.h  EmissiveSurface.h  Entity.h  LambertianBSDF.h  Light.h  Renderer.cpp  Renderer.h  SamplingHelpers.cpp  SamplingHelpers.h  Scene.h  SpectralData.cpp  SpectralData.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  VulkanContext.cpp  VulkanContext.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
